[package]
name = "entity-trait-system"
version = "1.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jagprog5/ets"
description = "An alternative to ECS"

[dependencies]
paste = "1.0.15"

# slot map has been pretty stable for a while (2 years). this adds one small
# commit - direct slice access to keys or values. handy for parallel iteration
# over contiguous data. https://github.com/orlp/slotmap/pull/134
slotmap = { git = "https://github.com/Swiiz/slotmap.git", version = "1.0.7", rev = "aa2b036010ea8038edf191b421c82a7fcc2d3eab" }

[dependencies.rayon]
version = "1.11"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
bincode = { version = "2.0", features = ["serde"] }
serde_json = "1.0"

[features]

# Enable with: --features rayon
# Parallel visitors
rayon = ["dep:rayon"]

# Enable with: --features serde
# Serialization support
serde = ["dep:serde", "slotmap/serde"]
default = []

# makes the world Debug fmt printable, but all contained entities must be also
# debug
debug = []